[package]
name = "gateway"
version = "0.1.0"
authors = ["irisu01 <nekomarisakirisame@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
dotenv = "0.15.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1.23.0", features = [ "rt", "rt-multi-thread", "macros", "sync" ]}
tokio-stream = "0.1.9"
futures = { version = "0.3", default-features = false }
warp = "0.3.3"
uuid = { version = "1.2.2", features = [ "v4" ] }
